student/apps/item-inventory/services/item-inventory/base/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
  labels:
    app.kubernetes.io/name: item-inventory
    app.kubernetes.io/version: 0.0.10
  name: item-inventory
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: item-inventory
    app.kubernetes.io/version: 0.0.10
  type: ClusterIP
